# IDEAM-Hydrology-Data-Automator

./: .env.example  .gitignore  LICENSE  README.md  automatizacion_ideam.bat  extractor_dinamico.py  extractor_estatico.py.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/ideam_socrata/: __init__.py  cli.py  config.py  core.py  exporting.py  extract.py  load.py  main.py  query_validation.py  tools.py  transform.py  ui.py  validation.py
tests/: test_query_export_helpers.py
