[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ideam-hydrology-data-automator"
version = "0.1.0"
description = "Pipeline para extraer, validar y organizar datos hidrologicos IDEAM desde Socrata."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Sergio Beltran Coley" }
]
dependencies = [
  "pandas",
  "sodapy",
  "rich",
  "pyarrow",
  "pydantic",
]

[project.scripts]
ideam-socrata = "ideam_socrata.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ideam_socrata*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
